[metadata]
name = bachelor-thesis
version = 0.0.1
author = Radovan Haluška
author_email = radovan.haluska1@gmail.com
description = Code for my bachelor thesis at Charles University
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rattko/Bachelor-Thesis
classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 100
